@startuml Monolith_Example

' Components
component "CampusReservationsApplication" as Mono_App
component "HTTP Endpoints" as Mono_Http
component "CommandBus" as Mono_CommandBus
component "ReservationService" as Mono_ReservationService
component "SchedulingService" as Mono_SchedulingService
component "ValidationChain\n(FacultyPolicyValidator,\nScheduleConflictValidator)" as Mono_ValidationChain
component "DatabaseConnectionImpl\n(InMemory/SQL)" as Mono_DbImpl
component "EventBusImpl\n(InMemory/MQTT)" as Mono_EventBusImpl

' Interfaces
interface "DatabaseConnection" as Mono_IDatabaseConnection
interface "EventBus" as Mono_IEventBus

' Wiring done on startup in CampusReservationsApplication
Mono_App --> Mono_DbImpl              : create via DatabaseFactory
Mono_App --> Mono_EventBusImpl        : create via EventBusFactory
Mono_App --> Mono_SchedulingService   : build SchedulingService
Mono_App --> Mono_ValidationChain     : build validation chain
Mono_App --> Mono_ReservationService  : inject db, eventBus,\nvalidators, scheduling
Mono_App --> Mono_CommandBus          : create CommandBus\nwith ReservationService
Mono_App --> Mono_Http                : register HTTP endpoints

' HTTP request path
Mono_Http --> Mono_CommandBus         : dispatch(command)
Mono_CommandBus --> Mono_ReservationService : execute use-case

' ReservationService dependencies
Mono_ReservationService --> Mono_ValidationChain    : validate()
Mono_ReservationService --> Mono_SchedulingService  : check/suggest()
Mono_ReservationService ..> Mono_IDatabaseConnection : uses
Mono_ReservationService ..> Mono_IEventBus           : publish()

' Interface realizations
Mono_DbImpl ..|> Mono_IDatabaseConnection
Mono_EventBusImpl ..|> Mono_IEventBus

@enduml
